cluster-with-certmanager/k8s/worker-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: worker-deployment
  namespace: dev
spec: 
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels: 
        component: worker
    spec:
      containers:
        - name: worker
          image: stephengrider/multi-worker
          securityContext:
            runAsUser: 1000
            runAsGroup: 3000
            fsGroup: 2000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
