cluster-with-certmanager/k8s/server-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: dev
spec:
  replicas: 3
  strategy:
   type: RollingUpdate
   rollingUpdate:
    maxSurge: 2
    maxUnavailable: 2
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: rallycoding/multi-server-dev
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet: 
              port: 5000
              path: /health
            initialDelaySeconds: 5
            periodSeconds: 15
            failureThreshold: 3
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              port: 5000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 2
          securityContext:
            runAsUser: 1000
            runAsGroup: 3000
            fsGroup: 2000
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 400m
              memory: 512Mi

---

apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
  namespace: dev
spec: 
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 5000
      targetPort: 5000
